syntax = "proto3";

option go_package = "github.com/fooage/messier/proto/pb";

package messier.transport;

// Porter is service to backup files between node and node.
service Porter {
    // File will be transform as bytes stream and use rpc method.
    rpc MoveFile(stream MoveRequest) returns (MoveReply) {}
}

// The file will be send as bytes stream, and length of content is variable.
message MoveRequest {
    bytes chunk = 1;
}

message MoveReply {
    enum Status {
        UNKNOWN = 0;
        SUCCESS = 1; // file's chunk transform success
        FAILED = 2;
    }
    Status status = 1;
}